--- a/header.html
+++ b/header.html
@@ -1,14 +1,5 @@
-<!doctype html>
-<html>
-<head>
-	<title>Copied Factory</title>
-	<link rel="stylesheet" href="downwith.css">
-	<meta charset="UTF-8">
-</head>
-<body>
-
 <!-- Header star- oh you're reading this? have fun! -->
-<header>
+<header id="loadthis">
 <div id="sitetitle">
 	<h1  class="title">Copied Factory</h1>
 	<span><em>A website.</em></span>
@@ -47,27 +38,9 @@
 	<!-- Other --><span>[Other]</span>
 		<a href="tips.html" title="General Combat Tips">TIPS</a>
 		<a href="faq.html" title="About and FAQ">FAQ</a>
-		<a href="blm_header_test.html" title="Testing">TEST</a>
 </nav>
 
 
 	<!-- Navigation End -->
 </header>
 <!-- Header Ends -->
-
-
-<!-- Here be where page content actually starts! Anything not between these comments should be the same on every page. -->
-<article>
-<div class="guidetitle">
-	<h2 class="title">Welcome!</h2>
-	<span>|<em>Updated: 8:50 AM 11/27/2021</em></span>
-</div>
-<p> This site is currently for hosting of guides written and or reformatted from various other guide sites. (Hence the name...) Currently we're mainly focusing on site structure more so than the writing and copying of guides. Endwalker is now less than a week away and once the dust settles on the shiny new expansion features writing will commence in full!</p>
-<h4>Hey? What's the point of this?</h4>
-<p>This should be on the FAQ but I can imagine this might be too common of a question. I'm doing this for a few main reasons:<p>
-<ol><li>I started on the concept for this before the balance discord launched it's website and icy veins started hosting ffxiv guides in ernest.</li><li>I have friends who don't like the way a lot of the currently written guides are explained and I like helping my friends.</li><li>It's fun! I enjoy FFXIV and I enjoy making silly little websites. That alone is enough to make me want to work on this. It's a passion project funded purely out of pocket and worked on purely out of love. <sub>(And maybe a little bit out of some residual spite of being tired of google doc guides...)</sub></p>
-</article>	
-<!-- Here be where page content actually ends! -->
-
-</body>
-</html>
