--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<!-- Other --><span>[Other]</span>
 		<a href="tips.html" title="General Combat Tips">TIPS</a>
 		<a href="faq.html" title="About and FAQ">FAQ</a>
-		<a href="blm_header_test.html" title="Testing">TEST</a>
+		<a href="test.html" title="Testing">TEST</a>
 </nav>
 
 
