--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="skills/caster.css">
 	<meta charset="UTF-8">
 	
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script> 
+	<script type="text/javascript" src="jquery.js"></script> 
     <script type="text/javascript"> 
 	$(document).ready(function(){
 	$("#loadheader").load("header.html");
