--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <!-- Header star- oh you're reading this? have fun! -->
-<header id="loadthis">
+<header>
 <div id="sitetitle">
 	<h1  class="title">Copied Factory</h1>
 	<span><em>A website.</em></span>
