--- a/test.html
+++ b/test.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>Copied Factory | BLM</title>
+	<title>Currently Testing... Loading Headers...</title>
 	<link rel="stylesheet" href="downwith.css">
 	<link rel="stylesheet" href="skills/blm.css">
 	<link rel="stylesheet" href="skills/caster.css">
 	<meta charset="UTF-8">
 	
-	<script type="text/javascript" src="jquery.js"></script> 
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script> 
     <script type="text/javascript"> 
 	$(document).ready(function(){
 	$("#loadheader").load("header.html");
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<div id="loadheader"></div>
+<header id="loadheader"></header>
 
 <!-- Here be where page content actually starts! Anything not between these comments should be the same on every page. -->
 <article role="main">
