--- a/header.html
+++ b/header.html
@@ -37,6 +37,7 @@
 	<!-- Other --><span>[Other]</span>
 		<a href="tips.html" title="General Combat Tips">TIPS</a>
 		<a href="faq.html" title="About and FAQ">FAQ</a>
+		<a href="test.html" title="Testing">TEST</a>
 </nav>
 <!-- Navigation End -->
 <!-- Header Ends -->
