--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<title>Copied Factory</title>
 	<link rel="stylesheet" href="downwith.css">
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
 <!-- Header star- oh you're reading this? have fun! -->
-<header>
+<header id="siteheader">
 <div id="sitetitle">
 	<h1  class="title">Copied Factory</h1>
 	<span><em>A website.</em></span>
@@ -18,36 +19,50 @@
  <!-- Navigation start -->
 <nav id="sitenav">
 	<h2 class="hidden">Navigation</h2>
-		<a href="index.html" title="Home Page">HOME</a>
-	<!-- Tanks --><span>[Tanks]</span>
-		<a href="pld.html" title="Paladin Guide">PLD</a>
-		<a href="war.html" title="Warrior Guide">WAR</a>
-		<a href="drk.html" title="Dark Knight Guide">DRK</a>
-		<a href="gnb.html" title="Gunbreaker Guide">GNB</a>
-	<!-- Healers --><span>[Healers]</span>
-		<a href="whm.html" title="White Mage Guide">WHM</a>
-		<a href="sch.html" title="Scholar Guide">SCH</a>
-		<a href="ast.html" title="Astrologian Guide">AST</a>
-		<a href="sge.html" title="Sage Guide">SGE</a>
-	<!-- Melees --><span>[Melee]</span>
-		<a href="mnk.html" title="Monk Guide">MNK</a>
-		<a href="drg.html" title="Dragoon Guide">DRG</a>
-		<a href="nin.html" title="Ninja Guide">NIN</a>
-		<a href="sam.html" title="Samurai Guide">SAM</a>
-		<a href="rpr.html" title="Reaper Guide">RPR</a>
-	<!-- Rangeds --><span>[Ranged]</span>
-		<a href="brd.html" title="Bard Guide">BRD</a>
-		<a href="mch.html" title="Machinist Guide">MCH</a>
-		<a href="dnc.html" title="Dancer Guide">DNC</a>
-	<!-- Casters --><span>[Casters]</span>
-		<a href="blm.html" title="Black Mage Guide">BLM</a>
-		<a href="smn.html" title="Summoner Guide">SMN</a>
-		<a href="rdm.html" title="Red Mage Guide">RDM</a>
-		<abbr title="Do not ask me about Blue Mage.">*</abbr>
-	<!-- Other --><span>[Other]</span>
-		<a href="tips.html" title="General Combat Tips">TIPS</a>
-		<a href="faq.html" title="About and FAQ">FAQ</a>
-		<a href="test.html" title="Testing">TEST</a>
+		<ul class="nav">
+			<li><a href="index.html" title="Home Page">HOME</a></li>
+			<li><!-- Tanks -->[Tanks]</li>
+				<ul>
+				<li><a href="pld.html" title="Paladin Guide">PLD</a></li>
+				<li><a href="war.html" title="Warrior Guide">WAR</a></li>
+				<li><a href="drk.html" title="Dark Knight Guide">DRK</a></li>
+				<li><a href="gnb.html" title="Gunbreaker Guide">GNB</a></li>
+				</ul>
+			<li><!-- Healers -->[Healers]</li>
+				<ul>
+				<li><a href="whm.html" title="White Mage Guide">WHM</a></li>
+				<li><a href="sch.html" title="Scholar Guide">SCH</a></li>
+				<li><a href="ast.html" title="Astrologian Guide">AST</a></li>
+				<li><a href="sge.html" title="Sage Guide">SGE</a></li>
+				</ul>
+			<li><!-- Melees -->[Melee]</li>
+				<ul>
+				<li><a href="mnk.html" title="Monk Guide">MNK</a></li>
+				<li><a href="drg.html" title="Dragoon Guide">DRG</a></li>
+				<li><a href="nin.html" title="Ninja Guide">NIN</a></li>
+				<li><a href="sam.html" title="Samurai Guide">SAM</a></li>
+				<li><a href="rpr.html" title="Reaper Guide">RPR</a></li>
+				</ul>
+			<li><!-- Rangeds -->[Ranged]</li>
+				<ul>
+				<li><a href="brd.html" title="Bard Guide">BRD</a></li>
+				<li><a href="mch.html" title="Machinist Guide">MCH</a></li>
+				<li><a href="dnc.html" title="Dancer Guide">DNC</a></li>
+				</ul>
+			<li><!-- Casters -->[Casters]</li>
+				<ul>
+				<li><a href="blm.html" title="Black Mage Guide">BLM</a></li>
+				<li><a href="smn.html" title="Summoner Guide">SMN</a></li>
+				<li><a href="rdm.html" title="Red Mage Guide">RDM</a></li>
+				<li><abbr title="Do not ask me about Blue Mage.">*</abbr></li>
+				</ul>
+			<li><!-- Other -->[Other]</li>
+				<ul>
+				<li><a href="tips.html" title="General Combat Tips">TIPS</a></li>
+				<li><a href="faq.html" title="About and FAQ">FAQ</a></li>
+				<li><a href="test.html" title="Testing">TEST</a></li>
+				</ul>
+		</ul>
 </nav>
 
 
@@ -65,7 +80,7 @@
 <p> This site is currently for hosting of guides written and or reformatted from various other guide sites. (Hence the name...) Currently we're mainly focusing on site structure more so than the writing and copying of guides. Endwalker is now less than a week away and once the dust settles on the shiny new expansion features writing will commence in full!</p>
 <h4>Hey? What's the point of this?</h4>
 <p>This should be on the FAQ but I can imagine this might be too common of a question. I'm doing this for a few main reasons:<p>
-<ol><li>I started on the concept for this before the balance discord launched it's website and icy veins started hosting ffxiv guides in ernest.</li><li>I have friends who don't like the way a lot of the currently written guides are explained and I like helping my friends.</li><li>It's fun! I enjoy FFXIV and I enjoy making silly little websites. That alone is enough to make me want to work on this. It's a passion project funded purely out of pocket and worked on purely out of love. <sub>(And maybe a little bit out of some residual spite of being tired of google doc guides...)</sub></p>
+<ol><li>I started on the concept for this before the balance discord launched it's website and icy veins started hosting ffxiv guides in ernest.</li><li>I have friends who don't like the way a lot of the currently written guides are explained and I like helping my friends.</li><li>It's fun! I enjoy FFXIV and I enjoy making silly little websites. That alone is enough to make me want to work on this. It's a passion project funded purely out of pocket and worked on purely out of love. <sub>(And maybe a little bit out of some residual spite of being tired of google doc guides...)</sub></p></li></ol>
 </article>	
 <!-- Here be where page content actually ends! -->
 
