--- a/test.html
+++ b/test.html
@@ -6,17 +6,20 @@
 	<link rel="stylesheet" href="skills/blm.css">
 	<link rel="stylesheet" href="skills/caster.css">
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<script type="text/javascript" src="jquery.js"></script> 
     <script type="text/javascript"> 
 	$(document).ready(function(){
-	$("#loadheader").load("header.html");
+	$("#loadheader").load("index.html #siteheader");
 	});
 	</script>
 </head>
 <body>
 
-<header id="loadheader"></header>
+<!--load the header from the index page -->
+<!-- im using span here to not have a header tag nested into another header? -->
+<span id="loadheader"></span> 
 
 <!-- Here be where page content actually starts! Anything not between these comments should be the same on every page. -->
 <article role="main">
