sprite sheet update
may only function on the test page,

--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 	<title>Currently Testing... Loading Headers...</title>
 	<link rel="stylesheet" href="downwith.css">
 	<link rel="stylesheet" href="skills/blm.css">
-	<link rel="stylesheet" href="skills/caster.css">
+	<link rel="stylesheet" href="skills/pots.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
@@ -73,8 +73,8 @@
 
 <section><a id="open" class="anchor"></a>
 	<h3>Openers</h3>
-	<p>Openers should put abilities on cooldown, fit strong spells within buff windows, and minimize clipping. All openers assume there is a pull countdown and the boss is pulled at 0. If your group pulls earlier, adjust them as necessary. Use the highest tier Tincture / Infusion / Potion of Intelligence available.</p>
-	<p>With all openers being very close in estimated output over the course of the entire encounter, it is instead recommended to choose your opener based on your current spellspeed, with consideration towards potential fight-specific requirements.</p>
+	<p>Openers should put abilities on cooldown, fit strong spells within buff windows, and minimize clipping. All openers assume there is a pull countdown and the boss is pulled at 0. If your group pulls earlier, adjust them as necessary. Use the highest tier Tincture / Infusion / potintion of Intelligence available.</p>
+	<p>With all openers being very close in estimated output over the course of the entire encounter, it is instead recommended to choose your opener based on your current spellspeed, with consideration towards potintential fight-specific requirements.</p>
 
 	<ul><li>&lt;558: Meld more SpS</li>
 	<li>558 - 2500: No B4 or Double Sharp Opener</li>
@@ -84,25 +84,25 @@
 	<h4>JP Opener</h4>
 		<div class="center"><div class="rot">
 			<ul class="rot">
-			<li class="isharp"></li>
+			<li class="sharp"></li>
 			<li class="fire3"></li>
-			<li class="ienoc"></li>
+			<li class="enoc"></li>
 			<li class="thun3"></li>
 			<li class="fire4"></li>
-			<li class="itriple"></li>
+			<li class="triple"></li>
 			<li class="fire4"></li>
-			<li class="ipot"></li>
+			<li class="potint"></li>
 			<li class="fire4"></li>
-			<li class="ileylines"></li>
+			<li class="leylines"></li>
 			<li class="fire4"></li>
-			<li class="iswift"></li>
+			<li class="swift"></li>
 			<li class="despair"></li>
 			<li class="convert"></li>
 			<li class="fire4"></li>
 			<li class="despair"></li>
 			<li class="blizz3"></li>
-			<li class="isharp"></li>
-			<li class="thunproc"></li>
+			<li class="sharp"></li>
+			<li class="tc"></li>
 			<li class="blizz4"></li>
 			</ul>
 		</div></div>
@@ -112,7 +112,7 @@
 	<h4>Modified JP Opener</h4>
 		<div class="center"><div class="rot">
 			<ul class="rot">
-			<li class="isharp"><li class="ileylines"><li class="fire3"><li class="ienoc"><li class="thun3"><li class="fire4"><li class="itriple"><li class="fire4"><li class="ipot"><li class="fire4"><li class="iswift"><li class="fire4"><li class="despair"><li class="convert"><li class="fire4"><li class="despair"><li class="blizz3"><li class="isharp"><li class="thunproc"><li class="blizz4">
+			<li class="sharp"><li class="leylines"><li class="fire3"><li class="enoc"><li class="thun3"><li class="fire4"><li class="triple"><li class="fire4"><li class="potint"><li class="fire4"><li class="swift"><li class="fire4"><li class="despair"><li class="convert"><li class="fire4"><li class="despair"><li class="blizz3"><li class="sharp"><li class="tc"><li class="blizz4">
 			</ul>
 		</div></div>
 		<p><em>Precast: Sharp at -12s, LL at -4s, and F3 at -3s.</em></p>
@@ -121,7 +121,7 @@
 	<h4>Double Sharp Opener</h4>
 		<div class="center"><div class="rot">
 			<ul class="rot">
-			<li class="isharp"><li class="blizz3"><li class="ienoc"><li class="thun3"><li class="blizz4"><li class="fire3"><li class="itriple"><li class="fire4"><li class="ipot"><li class="fire4"><li class="ileylines"><li class="fire4"><li class="fire4"><li class="thunproc"><li class="isharp"><li class="fire1"><li class="fire4"><li class="fire4"><li class="fireproc"><li class="iswift"><li class="despair"><li class="iconvert"><li class="fire4"><li class="despair"><li class="blizz3"><li class="blizz4"><li class="xeno">
+			<li class="sharp"><li class="blizz3"><li class="enoc"><li class="thun3"><li class="blizz4"><li class="fire3"><li class="triple"><li class="fire4"><li class="potint"><li class="fire4"><li class="leylines"><li class="fire4"><li class="fire4"><li class="tc"><li class="sharp"><li class="fire1"><li class="fire4"><li class="fire4"><li class="fireproc"><li class="swift"><li class="despair"><li class="convert"><li class="fire4"><li class="despair"><li class="blizz3"><li class="blizz4"><li class="xeno">
 			</ul>
 		</div></div>
 		<p><em>Precast: Sharp at -12s, and B3 at -4s.</em></p>
@@ -130,14 +130,14 @@
 	<h4>No B4 Opener</h4>
 		<div class="center"><div class="rot">
 			<ul class="rot">
-			<li class="isharp"><li class="blizz3"><li class="ienoc"><li class="thun3"><li class="fire3"><li class="itriple"><li class="fire4"><li class="ipot"><li class="fire4"><li class="ileylines"><li class="fire4"><li class="fire4"><li class="fire4"><li class="despair"><li class="thunproc"><li class="iconvert"><li class="fire4"><li class="despair"><li class="blizz3"><li class="blizz4"><li class="xeno">
+			<li class="sharp"><li class="blizz3"><li class="enoc"><li class="thun3"><li class="fire3"><li class="triple"><li class="fire4"><li class="potint"><li class="fire4"><li class="leylines"><li class="fire4"><li class="fire4"><li class="fire4"><li class="despair"><li class="tc"><li class="convert"><li class="fire4"><li class="despair"><li class="blizz3"><li class="blizz4"><li class="xeno">
 			</ul>
 		</div></div>
 		<p><em>Precast: Sharp anywhere between -12s and -5s, and B3 at -4s.</em></p>
 		<p>This opener is viable at low to moderate spellspeed values, and is usually the most recommended opener to use in the 558-2500 SpS range. Below around 1421 SpS you will need to weave in Swift under Triple in order to get to the Despair in time, as pictured here:</p>
 		<div class="center"><div class="rot">
 			<ul class="rot">
-			<li class="isharp"><li class="blizz3"><li class="ienoc"><li class="thun3"><li class="fire3"><li class="itriple"><li class="fire4"><li class="ipot"><li class="fire4"><li class="ileylines"><li class="fire4"><li class="iswift"><li class="fire4"><li class="fire4"><li class="despair"><li class="thunproc"><li class="iconvert"><li class="fire4"><li class="despair"><li class="blizz3"><li class="blizz4"><li class="xeno">
+			<li class="sharp"><li class="blizz3"><li class="enoc"><li class="thun3"><li class="fire3"><li class="triple"><li class="fire4"><li class="potint"><li class="fire4"><li class="leylines"><li class="fire4"><li class="swift"><li class="fire4"><li class="fire4"><li class="despair"><li class="tc"><li class="convert"><li class="fire4"><li class="despair"><li class="blizz3"><li class="blizz4"><li class="xeno">
 			</ul>
 		</div></div>
 		
