new sprite system
new sprite system for final testing!

--- a/test.html
+++ b/test.html
@@ -77,32 +77,32 @@
 	<p>With all openers being very close in estimated output over the course of the entire encounter, it is instead recommended to choose your opener based on your current spellspeed, with consideration towards potintential fight-specific requirements.</p>
 
 	<ul><li>&lt;558: Meld more SpS</li>
-	<li>558 - 2500: No B4 or Double Sharp Opener</li>
-	<li>2500 - 3600: Modified JP Opener or Double Sharp Opener</li>
+	<li>558 to 2500: No B4 or Double Sharp Opener</li>
+	<li>2500 to 3600: Modified JP Opener or Double Sharp Opener</li>
 	<li>&gt;3600: JP opener</li></ul>
 
 	<h4>JP Opener</h4>
 		<div class="center"><div class="rot">
 			<ul class="rot">
-			<li class="sharp"></li>
+			<li class="i sharp"></li>
 			<li class="fire3"></li>
-			<li class="enoc"></li>
+			<li class="i enoc"></li>
 			<li class="thun3"></li>
 			<li class="fire4"></li>
-			<li class="triple"></li>
+			<li class="i triple"></li>
 			<li class="fire4"></li>
-			<li class="potint"></li>
+			<li class="i potint"></li>
 			<li class="fire4"></li>
-			<li class="leylines"></li>
+			<li class="i leylines"></li>
 			<li class="fire4"></li>
-			<li class="swift"></li>
+			<li class="i swift"></li>
 			<li class="despair"></li>
-			<li class="convert"></li>
+			<li class="i manafont"></li>
 			<li class="fire4"></li>
 			<li class="despair"></li>
 			<li class="blizz3"></li>
-			<li class="sharp"></li>
-			<li class="tc"></li>
+			<li class="i sharp"></li>
+			<li class="i tc"></li>
 			<li class="blizz4"></li>
 			</ul>
 		</div></div>
@@ -112,7 +112,7 @@
 	<h4>Modified JP Opener</h4>
 		<div class="center"><div class="rot">
 			<ul class="rot">
-			<li class="sharp"><li class="leylines"><li class="fire3"><li class="enoc"><li class="thun3"><li class="fire4"><li class="triple"><li class="fire4"><li class="potint"><li class="fire4"><li class="swift"><li class="fire4"><li class="despair"><li class="convert"><li class="fire4"><li class="despair"><li class="blizz3"><li class="sharp"><li class="tc"><li class="blizz4">
+			<li class="i sharp"><li class="i leylines"><li class="fire3"><li class="i enoc"><li class="thun3"><li class="fire4"><li class="i triple"><li class="fire4"><li class="i potint"><li class="fire4"><li class="i swift"><li class="fire4"><li class="despair"><li class="i manafont"><li class="fire4"><li class="despair"><li class="blizz3"><li class="i sharp"><li class="tc"><li class="blizz4">
 			</ul>
 		</div></div>
 		<p><em>Precast: Sharp at -12s, LL at -4s, and F3 at -3s.</em></p>
@@ -121,7 +121,7 @@
 	<h4>Double Sharp Opener</h4>
 		<div class="center"><div class="rot">
 			<ul class="rot">
-			<li class="sharp"><li class="blizz3"><li class="enoc"><li class="thun3"><li class="blizz4"><li class="fire3"><li class="triple"><li class="fire4"><li class="potint"><li class="fire4"><li class="leylines"><li class="fire4"><li class="fire4"><li class="tc"><li class="sharp"><li class="fire1"><li class="fire4"><li class="fire4"><li class="fireproc"><li class="swift"><li class="despair"><li class="convert"><li class="fire4"><li class="despair"><li class="blizz3"><li class="blizz4"><li class="xeno">
+			<li class="i sharp"><li class="blizz3"><li class="i enoc"><li class="thun3"><li class="blizz4"><li class="fire3"><li class="i triple"><li class="fire4"><li class="i potint"><li class="fire4"><li class="i leylines"><li class="fire4"><li class="fire4"><li class="i tc"><li class="i sharp"><li class="fire1"><li class="fire4"><li class="fire4"><li class="i fs"><li class="i swift"><li class="despair"><li class="i manafont"><li class="fire4"><li class="despair"><li class="blizz3"><li class="blizz4"><li class="xeno">
 			</ul>
 		</div></div>
 		<p><em>Precast: Sharp at -12s, and B3 at -4s.</em></p>
@@ -130,14 +130,14 @@
 	<h4>No B4 Opener</h4>
 		<div class="center"><div class="rot">
 			<ul class="rot">
-			<li class="sharp"><li class="blizz3"><li class="enoc"><li class="thun3"><li class="fire3"><li class="triple"><li class="fire4"><li class="potint"><li class="fire4"><li class="leylines"><li class="fire4"><li class="fire4"><li class="fire4"><li class="despair"><li class="tc"><li class="convert"><li class="fire4"><li class="despair"><li class="blizz3"><li class="blizz4"><li class="xeno">
+			<li class="sharp"><li class="blizz3"><li class="enoc"><li class="thun3"><li class="fire3"><li class="triple"><li class="fire4"><li class="potint"><li class="fire4"><li class="leylines"><li class="fire4"><li class="fire4"><li class="fire4"><li class="despair"><li class="tc"><li class="manafont"><li class="fire4"><li class="despair"><li class="blizz3"><li class="blizz4"><li class="xeno">
 			</ul>
 		</div></div>
 		<p><em>Precast: Sharp anywhere between -12s and -5s, and B3 at -4s.</em></p>
 		<p>This opener is viable at low to moderate spellspeed values, and is usually the most recommended opener to use in the 558-2500 SpS range. Below around 1421 SpS you will need to weave in Swift under Triple in order to get to the Despair in time, as pictured here:</p>
 		<div class="center"><div class="rot">
 			<ul class="rot">
-			<li class="sharp"><li class="blizz3"><li class="enoc"><li class="thun3"><li class="fire3"><li class="triple"><li class="fire4"><li class="potint"><li class="fire4"><li class="leylines"><li class="fire4"><li class="swift"><li class="fire4"><li class="fire4"><li class="despair"><li class="tc"><li class="convert"><li class="fire4"><li class="despair"><li class="blizz3"><li class="blizz4"><li class="xeno">
+			<li class="i sharp"><li class="blizz3"><li class="i enoc"><li class="thun3"><li class="fire3"><li class="i triple"><li class="fire4"><li class="i potint"><li class="fire4"><li class="i leylines"><li class="fire4"><li class="i swift"><li class="fire4"><li class="fire4"><li class="despair"><li class="i tc"><li class="i manafont"><li class="fire4"><li class="despair"><li class="blizz3"><li class="blizz4"><li class="xeno">
 			</ul>
 		</div></div>
 		
