--- a/test.html
+++ b/test.html
@@ -52,7 +52,7 @@
 <section>
 <h4>Test Stuff If you can see this...dont look...look away</h4>
 <img src="images/blm/jpopener.png" alt="the jp opener">
-
+<p> okay now were here to test inline sprite <span class="s swift"></span> images here have some <span class="s fire1"></span> junk text Black Mage is a pure DPS job with a simple rotation with comeplexity that stems from planning your movement in battle around your <span class="s fire4"></span> long cast times and <span class="s swift"></span> finding the best use of your instant cast abilities and procs. Your rotation focuses primarily around draining your mana using powerful fire magic before swapping into ice magic to restore your mana quickly so you can get back to those pyrotechnics everyone loves to see. Black Mage is a pure DPS job with a simple  <span class="s mm1"></span> rotation with comeplexity that stems from planning your <span class="s xeno"></span> movement in battle around your long cast times and finding the best use of your instant cast abilities and procs. Your rotation focuses primarily around draining your mana using powerful fire magic before swapping into ice magic to restore your mana quickly so you can get back to those pyrotechnics everyone loves to see.</p>
 </section>
 
 <section><a id="bis" class="anchor"></a>
