--- a/test.html
+++ b/test.html
@@ -8,18 +8,85 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<script type="text/javascript" src="jquery.js"></script> 
+	<!-- <script type="text/javascript" src="jquery.js"></script> 
     <script type="text/javascript"> 
 	$(document).ready(function(){
 	$("#loadheader").load("index.html #siteheader");
 	});
-	</script>
+	</script> -->
 </head>
 <body>
 
 <!--load the header from the index page -->
 <!-- im using span here to not have a header tag nested into another header? -->
-<span id="loadheader"></span> 
+<!-- <span id="loadheader"></span>  -->
+
+<!-- I really should have a second css file for testing purposes, huh?-->
+<!-- anyway time for responsive nav tests... -->
+
+<!-- Header star- oh you're reading this? have fun! -->
+<header id="siteheader">
+<div id="sitetitle">
+	<h1  class="title"><a href="index.html" title="Home Page">Copied Factory</a></h1>
+	<span><em>A website.</em></span>
+	<span class="totop"><a href="#top">Top</a></span>
+</div>
+
+ <!-- Navigation start -->
+<nav id="sitenav">
+	<h2 class="hidden">Navigation</h2>
+		<ul class="nav">
+			<li class="dropbutton"><!-- Tanks -->[Tanks]
+				<ul>
+				<li><a href="pld.html" title="Paladin Guide">PLD</a></li>
+				<li><a href="war.html" title="Warrior Guide">WAR</a></li>
+				<li><a href="drk.html" title="Dark Knight Guide">DRK</a></li>
+				<li><a href="gnb.html" title="Gunbreaker Guide">GNB</a></li>
+				</ul></li>
+			<li class="dropbutton">[Healers]
+				<ul>
+				<li><a href="whm.html" title="White Mage Guide">WHM</a></li>
+				<li><a href="sch.html" title="Scholar Guide">SCH</a></li>
+				<li><a href="ast.html" title="Astrologian Guide">AST</a></li>
+				<li><a href="sge.html" title="Sage Guide">SGE</a></li>
+				</ul></li>
+			<li class="dropbutton">[Melee]
+				<ul>
+				<li><a href="mnk.html" title="Monk Guide">MNK</a></li>
+				<li><a href="drg.html" title="Dragoon Guide">DRG</a></li>
+				<li><a href="nin.html" title="Ninja Guide">NIN</a></li>
+				<li><a href="sam.html" title="Samurai Guide">SAM</a></li>
+				<li><a href="rpr.html" title="Reaper Guide">RPR</a></li>
+				</ul></li>
+			<li class="dropbutton">[Ranged]
+				<ul>
+				<li><a href="brd.html" title="Bard Guide">BRD</a></li>
+				<li><a href="mch.html" title="Machinist Guide">MCH</a></li>
+				<li><a href="dnc.html" title="Dancer Guide">DNC</a></li>
+				</ul></li>
+			<li class="dropbutton">[Casters]
+				<ul>
+				<li><a href="blm.html" title="Black Mage Guide">BLM</a></li>
+				<li><a href="smn.html" title="Summoner Guide">SMN</a></li>
+				<li><a href="rdm.html" title="Red Mage Guide">RDM</a></li>
+				<li><abbr title="Do not ask me about Blue Mage.">*</abbr></li>
+				</ul></li>
+			<li class="dropbutton">[Other]
+				<ul>
+				<li><a href="tips.html" title="General Combat Tips">TIPS</a></li>
+				<li><a href="faq.html" title="About and FAQ">FAQ</a></li>
+				<li><a href="test.html" title="Testing">TEST</a></li>
+				</ul></li>
+		</ul>
+</nav>
+
+
+	<!-- Navigation End -->
+</header>
+<!-- Header Ends -->
+
+
+
 
 <!-- Here be where page content actually starts! Anything not between these comments should be the same on every page. -->
 <article role="main">
