Full Site Rework.

--- a/404.html
+++ b/404.html
@@ -1,27 +1,16 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-	<title>Copied Factory | 404</title>
+	<title>404 | Copied Factory</title>
 	<link rel="stylesheet" href="downwith.css">
+	<link rel="stylesheet" href="stylish.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<script type="text/javascript" src="jquery.js"></script> 
-    <script type="text/javascript"> 
-	$(document).ready(function(){
-	$("#loadheader").load("index.html #siteheader");
-	});
-	</script>
 </head>
 <body>
-<!--load the header from the index page -->
-<header id="loadheader"></header>
-
-<!-- Here be where page content actually starts! Anything not between these comments should be the same on every page. -->
-<article>
-	<h1>Error 404: This doesn't exist. Probably because I didn't make it. Your loss.</h1>
-</article>
-<!-- Here be where page content actually ends! -->
-
+<section class="pad">
+<h1 class="center">Nothing.</h1>
+</section>
 </body>
 </html> 
