--- a/header_test.html
+++ b/header_test.html
@@ -4,6 +4,7 @@
 	<title>PLD | Copied Factory</title>
 	<link rel="stylesheet" href="downwith.css">
 	<link rel="stylesheet" href="stylish.css">
+	<link rel="stylesheet" href="headertest.css">
 	<link rel="stylesheet" href="skills/pld.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,15 +12,19 @@
 </head>
 <body>
 <header>
-<p class="todo">there should be a header here someday...</p>
+<nav class="sitenav">
+<h2 class="menuinactive"><img src="ui/paladin_inv.png" class="menuicon"> Home</h2>
+<h2 class="menuactive"><img src="ui/paladin.png" class="menuicon"> Job Guides</h2>
+<h2 class="menuinactive"><img src="ui/paladin_inv.png" class="menuicon"> Tips</h2>
+<h2 class="menuinactive"><img src="ui/paladin_inv.png" class="menuicon"> About</h2>
+</nav>
 </header>
 
 <main>
 <article>
 
 
-<div style="margin-bottom:1.1em;"><h1 class="title"><img src="ui/paladin.png" style="height:1.4em;margin-bottom:-.2em;"> Paladin</h1></div>
-<hr>
+<h1 class="articletitle"> Paladin</h1>
 <div class="flex">
 <nav class="articlenav">
 	<!-- <h1>Contents</h1> -->
