--- a/header_test.html
+++ b/header_test.html
@@ -2,29 +2,32 @@
 <html lang="en">
 <head>
 	<title>PLD | Copied Factory</title>
+	<link rel="icon" href="ui/icon.png">
 	<link rel="stylesheet" href="downwith.css">
 	<link rel="stylesheet" href="stylish.css">
 	<link rel="stylesheet" href="headertest.css">
 	<link rel="stylesheet" href="skills/pld.css">
-	<meta charset="UTF-8">
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
 	
 </head>
 <body>
 <header>
 <nav class="sitenav">
-<h2 class="menuinactive"><img src="ui/paladin_inv.png" class="menuicon"> Home</h2>
-<h2 class="menuactive"><img src="ui/paladin.png" class="menuicon"> Job Guides</h2>
-<h2 class="menuinactive"><img src="ui/paladin_inv.png" class="menuicon"> Tips</h2>
-<h2 class="menuinactive"><img src="ui/paladin_inv.png" class="menuicon"> About</h2>
+<a href="index.html"><h2 class="menu inactive"><img src="ui/icon.png" class="menuicon"> Home</h2></a>
+<a href="jobguides.html"><h2 class="menu active"><img src="ui/icon.png" class="menuicon"> Job Guides</h2></a>
+<a href="tips.html"><h2 class="menu inactive"><img src="ui/icon.png" class="menuicon"> Tips</h2></a>
+<a href="about.html"><h2 class="menu inactive"><img src="ui/icon.png" class="menuicon"> About</h2></a>
 </nav>
 </header>
 
+<p class="todo">Site title title heading thing. "Copied Factory"- big text- the works...? Also really need to find a better way to display skill information....</p>
+
 <main>
 <article>
-
-
-<h1 class="articletitle"> Paladin</h1>
+<h1 class="articletitle">Paladin</h1>
+<h2 class="subtitle">-The Oathkeeper</h2>
 <div class="flex">
 <nav class="articlenav">
 	<!-- <h1>Contents</h1> -->
@@ -39,12 +42,12 @@
 	</ul>
 </nav>
 <blockquote>
-<p class="timestamp"><em>Updated: 5:40 PM 1/17/2022</em></p>
+<p class="timestamp"><em>■ Updated: 5:40 PM 1/17/2022</em></p>
 <p>Paladin is a tank with a simple linear rotation that alternates between physical melee and magical ranged phases. With interesting utility in skills like Clemency and Cover, plus the fun of using Hallowed Ground to take zero damage even during some of the hardest hitting attacks, paladin is one of the easiest tanks to pick up but can still take a lot of practice to master!</p>
 </blockquote>
 </div>
 
-<section id="skills" class="pad"><h1 class="section">Actions and Traits</h1>
+<section id="skills" class="pad"><h1 class="section">■ Actions and Traits</h1>
 <p>Descriptions are written as the action exists at level 90. Some actions change with traits as you level up, so while leveling your actions may lack certain effects.
 All actions and traits are listed in the order that they are learned. Actions that reference another will include links to the other skills.
 Recast times are taken at base skillspeed and spellspeed. Raising these attributes will shorten the recast times of weaponskills and spells respectively.</p>
@@ -116,7 +119,7 @@ Recast times are taken at base skillspeed and spellspeed. Raising these attribut
 </section>
  -->
 
-<section id="open" class="pad"><h1 class="section">Openers</h1>
+<section id="open" class="pad"><h1 class="section">■ Openers</h1>
 	<p>Paladin has two two useful opener variations. The first starts your rotation off with the Fight or Flight window, getting as many cooldowns off within raid buffs as possible and setting you right on your standard rotation loop. The second one jumps into your Requiscat window which can help align your ranged attacks with times that you need to disengage from the boss. The Fight or Flight opener is recommended in most cases. </p>
 	<p>As of writing we are still very early on in the expansion. As such openers can and will change slightly over time due to more refined testing as well as changing GCD speeds that align better with current raid tier mechanics.</p>
 
@@ -190,7 +193,7 @@ Recast times are taken at base skillspeed and spellspeed. Raising these attribut
 </section>
 
 
-<section id="rot" class="pad"><h1 class="section">Rotation</h1>
+<section id="rot" class="pad"><h1 class="section">■ Rotation</h1>
 	<p>The paladin rotation is a minute long loop with 3 "phases" that you cycle around. First the Fight or Fight phase where you aim to get as many of your GCD and oGCD skills fit within the Fight or Flight buff as possible. Then the Requiescat phase where you expend all your Requiescat stacks, finishing with your powerful Confiteor combo. Lastly you have an "Unbuffed" phase where you bide you time with a Royal Authority combo and Atonements until Fight or Flight is off cooldown allowing you to start the loop over again.</p><p> This full loop can come out to ~64s for a standard loop, or ~61s for a shorter loop that fits better into buff windows. This is discussed more in the Unbuffed Phase section.</p>
 	
 	<section><h1>Fight or Flight Phase</h1>
@@ -260,7 +263,7 @@ Recast times are taken at base skillspeed and spellspeed. Raising these attribut
 
 <p class="todo">Anything below this line is just filler text for the sake of style testing and stuff.</p><hr>
 
-<article><h2>Dummy Text</h2><!-- Dummy Text -->
+<article><h2>■ Dummy Text</h2><!-- Dummy Text -->
 <section class="pad">
 <h1 class="section">Ability Overview</h1>
 <p>Praesent et lobortis tellus, vitae eleifend est. Suspendisse interdum gravida libero. Nulla varius justo sit amet mauris convallis rhoncus. Quisque at fringilla nisl, non eleifend felis. Curabitur id sapien eu libero commodo suscipit in vel massa. In sollicitudin viverra tellus in rhoncus. Proin nec nisi nisi. Nullam quis lorem nibh. Suspendisse nisl dui, rhoncus ut varius nec, sagittis et elit.</p>
